Sutter Health/src/objects/Image_Dimension__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SH_Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Image_Types__c</fullName>
        <label>Image Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Image Dimension</label>
</CustomObject>